Bug 104897 - unusual Yes-No order in some dialogs(eg: tabledesignsavemodifieddialog.ui)
Summary: unusual Yes-No order in some dialogs(eg: tabledesignsavemodifieddialog.ui)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.4.0
Keywords:
: 94419 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-12-23 21:28 UTC by himajin100000
Modified: 2017-01-23 14:33 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description himajin100000 2016-12-23 21:28:25 UTC
STEPS TO REPRODUCE:
1. Run LibreOffice Base
2. Proceed with the wizard to create Database as usual.
3. Select "Create Table in Design View..." from "Tasks" Pane.
4. Type "a" in the "Field Name" column in the first row. "Field Type" will automatically decided.
5. Click "File" from the Main menu and then choose "Close"
6. A dialog appears. Text there is "The table has been changed." in bold style, and "The table has been changed." with regular style. This dialog has no tile text in its title bar.
7. Take a look at this dialog more closely. At the bottom, you will find "No" button on the left side, "Yes" Button in the second position, and then "Cancel" at the right.

http://opengrok.libreoffice.org/xref/core/dbaccess/uiconfig/ui/savemodifieddialog.ui?r=a4536921f663fe3dcf7361362f7990286f24c3f2

* Generally Speaking, Windows's style of Yes-No order is "Yes" on the left side, and "No" in the second position, and "Cancel" at last. So, this gives me a bit strange feeling.

* There may be some other dialogs that follow the order this dialog uses.

FYI:
Some dialogs, such as the one that appears if you try to close the query design window after you create a query without saving it, do not have .ui files and these dialogs locate "Yes" button leftmost. This seems to be achieved by internally relying on QueryBox class, MessBox class .etc or ButtonDialog class.

Personal Question:
Would it be a plausible solution for the dialogs like the table design's to rely on these MessBox mechanisms, or moving onto .ui files style is the way we are going toward?
I'm not an expert, and I don't have a clue for this question.

Version: 5.4.0.0.alpha0+ (x64)
Build ID: 654b86cf3425d7a49b13a97e4b11223d43b9e86e
CPU Threads: 4; OS Version: Windows 6.19; UI Render: GL; 
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2016-12-20_22:52:05
Locale: en-US (ja_JP); Calc: single
Comment 1 Heiko Tietze 2016-12-27 11:23:46 UTC
AFAIK MacOS inverts the confirmation buttons. Guess we have to make a decision.
Comment 2 Adolfo Jayme Barrientos 2016-12-27 18:07:47 UTC
@Heiko: Years ago, when we were transitioning to Glade dialogs, it was decided that we should follow the most natural button order for each platform (i.e., positive–negative for Windows and KDE, and negative–positive for Gnome and macOS), but we never got around to implement it beyond the “Save Changes?” dialog.
Comment 3 Heiko Tietze 2017-01-12 12:59:32 UTC
Caolan is working on a solution (likely there is a duplicate of this ticket). 

Some general info about the issue:
   + https://www.nngroup.com/articles/ok-cancel-or-cancel-ok/
     + Windows puts Ok first, Apple puts OK last
   + Gnome and KDE uses "Save/Discard/Cancel" or "Yes/No/Cancel" sequence 
     + https://community.kde.org/KDE_Visual_Design_Group/HIG/Dialogs
     + http://vim-dev.vim.narkive.com/qFf5LUMj/gnome-hig-compliance-in-gvim-button-order-in-close-confirmation-dialogs-patch
   + But Gnome puts confirmation also last https://developer.gnome.org/hig/stable/dialogs.html.en

NeedsUX removed.
Comment 4 Commit Notification 2017-01-12 15:26:40 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1d7cf3f0391214a17593eced752e2a1786c0a1e3

Resolves: tdf#104897 sort windows buttons into yes, no, cancel

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2017-01-12 15:29:55 UTC
yeah, I sort of put off the button sorting idea because people get very emotive about it. I'll enable it now for the new ui message dialogs so you get yes, no, cancel under windows, and no, cancel, yes for gnome/macosx
Comment 6 Heiko Tietze 2017-01-23 14:33:35 UTC
*** Bug 94419 has been marked as a duplicate of this bug. ***