Resolves: tdf#104897 sort windows buttons into yes, no, cancel

and kde, for gnome/macosx use no, cancel, yes

Change-Id: I4aff39938c1c9f81b47934d8f1d9400c106781ad